--- a/assets/styles/scss/main.css
+++ b/assets/styles/scss/main.css
@@ -151,7 +151,7 @@ a, button {
   display: flex;
   align-items: center; }
   .nav__control-item {
-    background-color: #190025;
+    background-color: #419EFC;
     transition: background-color .3s ease, border-radius .3s ease;
     border-radius: 10px;
     padding: 11px;
@@ -159,7 +159,7 @@ a, button {
     cursor: pointer;
     height: 47px; }
     .nav__control-item:hover {
-      background-color: #35004e; }
+      background-color: darkolivegreen; }
   .nav__control-online {
     display: flex;
     margin-right: 10px;
@@ -170,7 +170,7 @@ a, button {
     .nav__control-online__ip {
       margin-bottom: 4px; }
     .nav__control-online__checked {
-      color: #FF97E8; }
+      color: chartreuse; }
     .nav__control-online__hover {
       background-color: #000;
       font-size: 12px;
@@ -254,7 +254,11 @@ a, button {
     background: black;
     display: inline-block;
     align-self: center;
-    border-radius: 17px; }
+    border-radius: 17px;
+    transition: 0.3s; }
+    .main_banner a:hover {
+      transform: scale(1.2);
+      transition: 0.3s; }
 
 .donate {
   background: #F5F8FF;
@@ -269,11 +273,19 @@ a, button {
       justify-content: space-between;
       position: relative;
       margin-right: 32px; }
+      @media screen and (max-width: 800px) {
+        .donate .donate__box .donate__sidebar {
+          background: inherit;
+          max-width: 100%;
+          margin-right: 0; } }
       .donate .donate__box .donate__sidebar-header {
         margin-top: 74px;
         padding: 10px;
         border-radius: 24px;
         background-color: white; }
+        @media screen and (max-width: 800px) {
+          .donate .donate__box .donate__sidebar-header {
+            margin: 0; } }
       .donate .donate__box .donate__sidebar-item {
         font-family: 'Montserrat 600', serif;
         font-style: normal;
@@ -365,9 +377,9 @@ a, button {
     font-family: inherit; }
   .donate__products-info {
     color: black;
-    margin-bottom: 6px;
-    padding: 0 10px;
-    background: #DEEBFE; }
+    margin-bottom: 6px; }
+    .donate__products-info:hover {
+      opacity: 0.5; }
   .donate__products-description {
     display: none; }
   .donate__products-buy {
@@ -389,25 +401,8 @@ a, button {
     max-width: 224px;
     display: flex;
     justify-content: space-between;
-    margin: auto auto 10px; }
-
-.last {
-  margin-bottom: 92px; }
-  .last__title {
-    text-align: center;
-    margin-bottom: 23px; }
-
-.last__box {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 24px; }
-  .last__box-item {
-    width: 170px;
-    height: 170px;
-    background-color: #fff;
-    transition: background-color .3s ease;
-    border-radius: 10px; }
+    margin: auto auto 10px;
+    align-items: center; }
 
 .footer {
   padding: 50px 50px;
@@ -415,9 +410,15 @@ a, button {
   .footer ._container {
     display: flex;
     justify-content: space-between; }
+    @media screen and (max-width: 800px) {
+      .footer ._container {
+        flex-direction: column; } }
     .footer ._container .footer_logo {
       display: flex;
       align-items: center; }
+      @media screen and (max-width: 800px) {
+        .footer ._container .footer_logo {
+          justify-content: center; } }
     .footer ._container .footer_name {
       margin-left: 20px; }
     .footer ._container p {
@@ -432,6 +433,9 @@ a, button {
   .footer .footer_payment {
     display: flex;
     align-items: center; }
+    @media screen and (max-width: 800px) {
+      .footer .footer_payment {
+        justify-content: center; } }
     .footer .footer_payment img:first-of-type {
       width: 100px;
       margin-right: 10px; }
@@ -439,6 +443,9 @@ a, button {
       width: 100px; }
   .footer .footer_left {
     flex-basis: 50%; }
+    @media screen and (max-width: 800px) {
+      .footer .footer_left {
+        margin-bottom: 30px; } }
   .footer .footer_right {
     flex-basis: 50%; }
     .footer .footer_right .navigation h3 {
@@ -449,9 +456,15 @@ a, button {
       line-height: 22px;
       color: rgba(255, 255, 255, 0.43);
       margin-bottom: 20px; }
+      @media screen and (max-width: 800px) {
+        .footer .footer_right .navigation h3 {
+          text-align: center; } }
   .footer .footer_nav_bar {
     display: flex;
     justify-content: space-between; }
+    @media screen and (max-width: 800px) {
+      .footer .footer_nav_bar {
+        display: block; } }
     .footer .footer_nav_bar a {
       position: relative;
       display: block;
@@ -464,15 +477,34 @@ a, button {
       .footer .footer_nav_bar a::before {
         content: '';
         position: absolute;
-        bottom: -2px;
+        bottom: -4px;
+        left: 0;
         width: 0;
         height: 2px;
         background-color: #419EFC;
-        border-radius: 4px; }
+        border-radius: 0 5px 5px 0; }
       .footer .footer_nav_bar a:hover::before {
         width: 100%; }
+      @media screen and (max-width: 1000px) {
+        .footer .footer_nav_bar a {
+          font-size: 16px; } }
+      @media screen and (max-width: 880px) {
+        .footer .footer_nav_bar a {
+          font-size: 14px; } }
+      @media screen and (max-width: 800px) {
+        .footer .footer_nav_bar a {
+          font-size: 18px; } }
+  @media screen and (max-width: 800px) {
+    .footer .footer_nav_left {
+      text-align: center; } }
+  @media screen and (max-width: 800px) {
+    .footer .footer_nav_right {
+      text-align: center; } }
   .footer .footer_nav_left > a:first-of-type {
     margin-bottom: 10px; }
+  @media screen and (max-width: 800px) {
+    .footer .footer_nav_left > a:last-of-type {
+      margin-bottom: 10px; } }
   .footer .footer_nav_right > a:first-of-type {
     margin-bottom: 10px; }
 
@@ -722,8 +754,7 @@ a, button {
       top: 50px;
       z-index: 9;
       padding: 0;
-      background-color: rgba(255, 255, 255, 0.8);
-      padding-bottom: 30px; }
+      background-color: rgba(255, 255, 255, 0.8); }
       .donate__box .donate__sidebar::before {
         display: none; }
       .donate__box .donate__sidebar-header {
@@ -768,110 +799,5 @@ a, button {
 
   .modals__cart {
     padding: 10px; } }
-body.theme-dark {
-  background-color: #1C0427;
-  color: #fff; }
-  body.theme-dark .textstyle__title {
-    color: #F7D1F8; }
-  body.theme-dark .textstyle__link {
-    color: #feeeff; }
-  body.theme-dark .nav {
-    background-color: #190025; }
-    body.theme-dark .nav::before {
-      background-color: #190025; }
-    body.theme-dark .nav.active {
-      background-color: unset; }
-    body.theme-dark .nav .nav__control-item {
-      background-color: #490046; }
-      body.theme-dark .nav .nav__control-item:hover {
-        background-color: #660062; }
-  body.theme-dark .nav__list-item:hover {
-    color: #f1e9ff; }
-    body.theme-dark .nav__list-item:hover::before {
-      background-color: #f1e9ff; }
-  body.theme-dark .donate__box {
-    background-color: #290F32; }
-    body.theme-dark .donate__box .donate__sidebar {
-      background-color: rgba(41, 15, 50, 0.8);
-      transition: background-color .3s ease; }
-  body.theme-dark .donate__sidebar::before {
-    background-color: rgba(73, 0, 70, 0.4); }
-  body.theme-dark .donate__sidebar-item {
-    color: #F7D1F8;
-    background-color: #490046;
-    box-shadow: 0px 4px 0px rgba(255, 134, 250, 0.25); }
-    body.theme-dark .donate__sidebar-item:hover {
-      background-color: #690066;
-      box-shadow: 0px 3px 0px rgba(255, 134, 250, 0.25); }
-    body.theme-dark .donate__sidebar-item.active {
-      background-color: #660062;
-      box-shadow: 0px 0px; }
-  body.theme-dark .donate__sidebar-footer {
-    color: #F7D1F8; }
-  body.theme-dark .donate__products-item {
-    background-color: #490046;
-    border: 1px solid yellow; }
-  body.theme-dark .donate__products-image {
-    background-color: #3A0038; }
-  body.theme-dark .donate__products-name {
-    color: #F7D1F8; }
-  body.theme-dark .donate__products-price {
-    color: #FB71FF; }
-  body.theme-dark .last__box-item {
-    background-color: #290F32; }
-  body.theme-dark .footer__nav {
-    background-color: #190025; }
-  body.theme-dark .footer__up {
-    background-color: #490046; }
-    body.theme-dark .footer__up:hover {
-      background-color: #660062; }
-  body.theme-dark .footer__copyright {
-    background-color: #160020; }
-  body.theme-dark .modals .modals {
-    background-color: rgba(0, 0, 0, 0.8); }
-    body.theme-dark .modals .modals__item {
-      background-color: #290F32;
-      color: #F7D1F8; }
-    body.theme-dark .modals .modals__title {
-      color: #fff; }
-    body.theme-dark .modals .modals__cart {
-      background-color: #490046; }
-    body.theme-dark .modals .modals__product {
-      background-color: #61005e; }
-      body.theme-dark .modals .modals__product-name {
-        color: #ffffff; }
-      body.theme-dark .modals .modals__product-price {
-        color: #ffbcfd; }
-    body.theme-dark .modals .modals__input {
-      border-bottom: 2px solid #ffbdfd;
-      background-color: #3a033a;
-      color: #f081ff; }
-      body.theme-dark .modals .modals__input::placeholder {
-        color: #f081ff; }
-    body.theme-dark .modals .modals__amount-control {
-      background-color: #270027; }
-      body.theme-dark .modals .modals__amount-control:hover {
-        background-color: #6d036d; }
-    body.theme-dark .modals .modals__amount-result {
-      background-color: #1f001f; }
-    body.theme-dark .modals .modals__amount.disabled .modals__amount-control::before {
-      background-color: #ff0000; }
-    body.theme-dark .modals .modals__payment-control {
-      border-bottom: 2px solid #ffbdfd;
-      background-color: #3a033a;
-      color: rgba(240, 129, 255, 0.7); }
-      body.theme-dark .modals .modals__payment-control:hover {
-        background-color: #330033; }
-    body.theme-dark .modals .modals__payment-item {
-      background-color: #220b22;
-      color: #fee2ff; }
-      body.theme-dark .modals .modals__payment-item:hover {
-        background-color: #471547; }
-    body.theme-dark .modals .modals__button {
-      background-color: #380038;
-      color: #F7D1F8;
-      box-shadow: 0px 4px 0px rgba(255, 192, 253, 0.25); }
-      body.theme-dark .modals .modals__button:hover {
-        background-color: #471547; }
 
 /*# sourceMappingURL=main.css.map */
