--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -148,6 +148,7 @@ a, button {
 
         .nav__list {
             display: block;
+
             &-item {
                 margin-right: 0;
                 margin-bottom: 40px;
@@ -228,14 +229,14 @@ a, button {
     display: flex;
     align-items: center;
     &-item {
-        background-color: #190025;
+        background-color: #419EFC;
         transition: background-color .3s ease, border-radius .3s ease;
         border-radius: 10px;
         padding: 11px;
         color: #fff;
         cursor: pointer;
         &:hover {
-            background-color: #35004e;
+            background-color: darkolivegreen;
         }
         height: 47px;
     }
@@ -255,7 +256,7 @@ a, button {
         &__status {
         }
         &__checked {
-            color: #FF97E8;
+            color: chartreuse;
         }
         &__hover {
             background-color: #000;
@@ -371,6 +372,11 @@ a, button {
         display: inline-block;
         align-self: center;
         border-radius: 17px;
+        transition: 0.3s;
+        &:hover{
+            transform: scale(1.2);
+            transition: 0.3s;
+        }
     }
 }
 
@@ -383,18 +389,26 @@ a, button {
         transition: background-color .3s ease;
         display: flex;
         .donate__sidebar {
-
             max-width: 260px;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
             position: relative;
             margin-right: 32px;
+            @include max-screen(800px){
+                background: inherit;
+                max-width: 100%;
+                margin-right: 0;
+            }
             &-header {
                 margin-top: 74px;
                 padding: 10px;
                 border-radius: 24px;
                 background-color: white;
+                @include max-screen(800px){
+                    margin: 0;
+                }
+
 
             }
 
@@ -433,33 +447,6 @@ a, button {
         }
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 .donate__products {
     width: 100%;
@@ -554,9 +541,10 @@ a, button {
 
         color: black;
         margin-bottom: 6px;
+        &:hover{
+            opacity: 0.5;
+        }
 
-        padding: 0 10px;
-        background: #DEEBFE;
     }
 
     &-description {
@@ -588,53 +576,7 @@ a, button {
         display: flex;
         justify-content: space-between;
         margin: auto auto 10px;
-    }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.last {
-    margin-bottom: 92px;
-    ._container {
-
-    }
-
-    &__title {
-        text-align: center;
-        margin-bottom: 23px;
-    }
-}
-
-.last__box {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    // margin: -12px -12px;
-    gap: 24px;
-    &-item {
-        width: 170px;
-        height: 170px;
-        background-color: #fff;
-        transition: background-color .3s ease;
-
-        border-radius: 10px;
+        align-items: center;
     }
 }
 
@@ -644,9 +586,15 @@ a, button {
     ._container{
         display: flex;
         justify-content: space-between;
+        @include max-screen(800px){
+            flex-direction: column;
+        }
         .footer_logo{
             display: flex;
             align-items: center;
+            @include max-screen(800px){
+                justify-content: center;
+            }
 
         }
         .footer_name{
@@ -667,6 +615,9 @@ a, button {
     .footer_payment{
         display: flex;
         align-items: center;
+        @include max-screen(800px){
+            justify-content: center;
+        }
 
         img:first-of-type{
             width: 100px;
@@ -679,6 +630,9 @@ a, button {
     }
     .footer_left{
         flex-basis: 50%;
+        @include max-screen(800px){
+            margin-bottom: 30px;
+        }
     }
     .footer_right{
         flex-basis: 50%;
@@ -691,12 +645,18 @@ a, button {
                 line-height: 22px;
                 color: rgba(255, 255, 255, 0.43);
                 margin-bottom: 20px;
+                @include max-screen(800px){
+                    text-align: center;
+                }
             }
         }
     }
     .footer_nav_bar{
         display: flex;
         justify-content: space-between;
+        @include max-screen(800px){
+            display: block;
+        }
         a{
             position: relative;
             display: block;
@@ -706,24 +666,52 @@ a, button {
             font-size: 18px;
             line-height: 22px;
             color: white;
-        &::before {
-            content: '';
-            position: absolute;
+            &::before {
+                content: '';
+                position: absolute;
+                bottom: -4px;
+                left: 0;
+                width: 0;
+                height: 2px;
+                background-color: #419EFC;
+                border-radius:  0 5px 5px 0;
+            }
+            &:hover::before {
+                width: 100%;
+            }
+            @include max-screen(1000px){
+                font-size: 16px;
+            }
+            @include max-screen(880px){
+                font-size: 14px;
+            }
+            @include max-screen(800px){
+                font-size: 18px;
+            }
 
-            bottom: -2px;
-            width: 0;
-            height: 2px;
-            background-color: #419EFC;
-            border-radius: 4px
-        }
-        &:hover::before {
-            width: 100%;
-        }
         }
     }
+
+    .footer_nav_left{
+        @include max-screen(800px){
+            text-align: center;
+        }
+    }
+    .footer_nav_right{
+        @include max-screen(800px){
+            text-align: center;
+        }
+    }
+
     .footer_nav_left>a:first-of-type{
         margin-bottom: 10px;
     }
+    .footer_nav_left>a:last-of-type{
+        @include max-screen(800px){
+            margin-bottom: 10px;
+        }
+    }
+
     .footer_nav_right>a:first-of-type{
         margin-bottom: 10px;
     }
@@ -1081,7 +1069,6 @@ a, button {
             padding: 0;
 
             background-color: rgba($color: #FFF, $alpha: .8);
-            padding-bottom: 30px;
             &::before {
                 display: none;
             }
@@ -1117,7 +1104,7 @@ a, button {
         }
     }
 
-    
+
     .news__content {
         flex-direction: column;
 
@@ -1165,206 +1152,206 @@ a, button {
 
 
 
-body.theme-dark {
-    background-color: #1C0427;
-    color: #fff;
-
-    .textstyle__title {
-        color: #F7D1F8;
-    }
-
-    .textstyle__link {
-        color: #feeeff;
-    }
-
-    .nav {
-        background-color: #190025;
-        &::before {
-            background-color: #190025;
-        }
-        &.active {
-            background-color: unset;
-        }
-        .nav__control-item {
-            background-color: #490046;
-
-            &:hover {
-                background-color: #660062;
-            }
-        }
-    }
-
-    .nav__list-item {
-        &:hover {
-            color: #f1e9ff;
-
-            &::before {
-                background-color: #f1e9ff;
-            }
-        }
-    }
-
-    .donate__box {
-        background-color: #290F32;
-
-        .donate__sidebar {
-            background-color: rgba($color: #290F32, $alpha: .8);
-            transition: background-color .3s ease;
-        }
-    }
-
-    .donate__sidebar::before {
-        background-color: rgba($color: #490046, $alpha: .4);
-    }
-
-    .donate__sidebar-item {
-        color: #F7D1F8;
-        background-color: #490046;
-        box-shadow: 0px 4px 0px rgba(255, 134, 250, 0.25);
-
-        &:hover {
-            background-color: #690066;
-            box-shadow: 0px 3px 0px rgba(255, 134, 250, 0.25);
-        }
-
-        &.active {
-            background-color: #660062;
-            box-shadow: 0px 0px;
-        }
-    }
-    .donate__sidebar-footer {
-        color: #F7D1F8;
-    }
-
-    .donate__products-item {
-        background-color: #490046;
-        border: 1px solid yellow;
-    }
-
-    .donate__products-image {
-        background-color: #3A0038;
-
-    }
-
-    .donate__products-name {
-        color: #F7D1F8;
-    }
-
-    .donate__products-price {
-        color: #FB71FF;
-    }
-
-    .last__box-item {
-        background-color: #290F32;
-    }
-
-    .footer__nav {
-        background-color: #190025;
-    }
-
-    .footer__up {
-        background-color: #490046;
-
-        &:hover {
-            background-color: #660062;
-        }
-    }
-
-    .footer__copyright {
-        background-color: #160020;
-    }
-
-    .modals {
-        .modals {
-            background-color: rgba($color: #000, $alpha: .8);
-            &__item {
-                background-color: #290F32;
-                color: #F7D1F8;
-            }
-        
-            &__title {
-                color: #fff
-            }
-            &__cart {
-                background-color: #490046;
-            }
-        
-            &__product {
-                background-color: #61005e;
-        
-                &-name {
-                    color: #ffffff;
-                }
-        
-                &-price {
-                    color: #ffbcfd;
-                }
-            }
-        
-            &__input {
-                border-bottom: 2px solid #ffbdfd;
-                background-color: #3a033a;
-                color: #f081ff;
-
-                &::placeholder {
-                    color: #f081ff;
-                }
-            }
-        
-            &__amount {
-        
-                &-control {
-                    background-color: #270027;
-                    &:hover {
-                        background-color: #6d036d;
-                    }
-                }
-        
-                &-result {
-                    background-color: #1f001f;
-                }
-                &.disabled {
-                    .modals__amount-control::before {
-                        background-color: #ff0000;
-        
-                    }
-                }
-            }
-        
-            &__payment {
-                &-control {
-                    border-bottom: 2px solid #ffbdfd;
-                    background-color: #3a033a;
-                    color: rgba($color: #f081ff, $alpha: .7);
-        
-                    &:hover {
-                        background-color: #330033;
-                    }
-                }
-        
-                // &-selected {
-                //     color: #f9cdff;
-                //     background-color: #160020;
-                // }
-        
-                &-item {
-                    background-color: #220b22;
-                    color: #fee2ff;
-                    &:hover {
-                        background-color: #471547;
-                    }
-                }
-            }
-        
-            &__button {
-                background-color: #380038;
-                color: #F7D1F8;
-                box-shadow: 0px 4px 0px rgba(255, 192, 253, 0.25);
-        
-                &:hover {
-                    background-color: #471547;
-                }
-            }
-        }
-    }
-}
+//body.theme-dark {
+//    background-color: #1C0427;
+//    color: #fff;
+//
+//    .textstyle__title {
+//        color: #F7D1F8;
+//    }
+//
+//    .textstyle__link {
+//        color: #feeeff;
+//    }
+//
+//    .nav {
+//        background-color: #190025;
+//        &::before {
+//            background-color: #190025;
+//        }
+//        &.active {
+//            background-color: unset;
+//        }
+//        .nav__control-item {
+//            background-color: #490046;
+//
+//            &:hover {
+//                background-color: #660062;
+//            }
+//        }
+//    }
+//
+//    .nav__list-item {
+//        &:hover {
+//            color: #f1e9ff;
+//
+//            &::before {
+//                background-color: #f1e9ff;
+//            }
+//        }
+//    }
+//
+//    .donate__box {
+//        background-color: #290F32;
+//
+//        .donate__sidebar {
+//            background-color: rgba($color: #290F32, $alpha: .8);
+//            transition: background-color .3s ease;
+//        }
+//    }
+//
+//    .donate__sidebar::before {
+//        background-color: rgba($color: #490046, $alpha: .4);
+//    }
+//
+//    .donate__sidebar-item {
+//        color: #F7D1F8;
+//        background-color: #490046;
+//        box-shadow: 0px 4px 0px rgba(255, 134, 250, 0.25);
+//
+//        &:hover {
+//            background-color: #690066;
+//            box-shadow: 0px 3px 0px rgba(255, 134, 250, 0.25);
+//        }
+//
+//        &.active {
+//            background-color: #660062;
+//            box-shadow: 0px 0px;
+//        }
+//    }
+//    .donate__sidebar-footer {
+//        color: #F7D1F8;
+//    }
+//
+//    .donate__products-item {
+//        background-color: #490046;
+//        border: 1px solid yellow;
+//    }
+//
+//    .donate__products-image {
+//        background-color: #3A0038;
+//
+//    }
+//
+//    .donate__products-name {
+//        color: #F7D1F8;
+//    }
+//
+//    .donate__products-price {
+//        color: #FB71FF;
+//    }
+//
+//    .last__box-item {
+//        background-color: #290F32;
+//    }
+//
+//    .footer__nav {
+//        background-color: #190025;
+//    }
+//
+//    .footer__up {
+//        background-color: #490046;
+//
+//        &:hover {
+//            background-color: #660062;
+//        }
+//    }
+//
+//    .footer__copyright {
+//        background-color: #160020;
+//    }
+//
+//    .modals {
+//        .modals {
+//            background-color: rgba($color: #000, $alpha: .8);
+//            &__item {
+//                background-color: #290F32;
+//                color: #F7D1F8;
+//            }
+//
+//            &__title {
+//                color: #fff
+//            }
+//            &__cart {
+//                background-color: #490046;
+//            }
+//
+//            &__product {
+//                background-color: #61005e;
+//
+//                &-name {
+//                    color: #ffffff;
+//                }
+//
+//                &-price {
+//                    color: #ffbcfd;
+//                }
+//            }
+//
+//            &__input {
+//                border-bottom: 2px solid #ffbdfd;
+//                background-color: #3a033a;
+//                color: #f081ff;
+//
+//                &::placeholder {
+//                    color: #f081ff;
+//                }
+//            }
+//
+//            &__amount {
+//
+//                &-control {
+//                    background-color: #270027;
+//                    &:hover {
+//                        background-color: #6d036d;
+//                    }
+//                }
+//
+//                &-result {
+//                    background-color: #1f001f;
+//                }
+//                &.disabled {
+//                    .modals__amount-control::before {
+//                        background-color: #ff0000;
+//
+//                    }
+//                }
+//            }
+//
+//            &__payment {
+//                &-control {
+//                    border-bottom: 2px solid #ffbdfd;
+//                    background-color: #3a033a;
+//                    color: rgba($color: #f081ff, $alpha: .7);
+//
+//                    &:hover {
+//                        background-color: #330033;
+//                    }
+//                }
+//
+//                // &-selected {
+//                //     color: #f9cdff;
+//                //     background-color: #160020;
+//                // }
+//
+//                &-item {
+//                    background-color: #220b22;
+//                    color: #fee2ff;
+//                    &:hover {
+//                        background-color: #471547;
+//                    }
+//                }
+//            }
+//
+//            &__button {
+//                background-color: #380038;
+//                color: #F7D1F8;
+//                box-shadow: 0px 4px 0px rgba(255, 192, 253, 0.25);
+//
+//                &:hover {
+//                    background-color: #471547;
+//                }
+//            }
+//        }
+//    }
+//}
