--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -1428,6 +1428,11 @@ a, button {
     visibility: hidden;
 }
 
+.popup:target{
+    opacity: 1;
+    visibility: visible;
+}
+
 .popup_body{
     min-height: 100%;
     display: flex;
