--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -222,9 +222,6 @@ a, button {
             &:hover::before {
                 width: 100%;
             }
-            &:hover {
-                color: #1b1b1b;
-            }
             &:last-child {
                 margin-right: 0;
             }
@@ -242,8 +239,10 @@ a, button {
         padding: 11px;
         color: #fff;
         cursor: pointer;
-        &:hover {
-            background-color: darkolivegreen;
+
+
+    &:hover {
+            background-color: #0f0f0f;
         }
         height: 47px;
     }
@@ -423,8 +422,9 @@ a, button {
                 @include max-screen(800px){
                     margin: 0;
                 }
-
-
+                &.dark{
+                    background: transparent;
+                }
             }
 
             &-item {
@@ -460,7 +460,12 @@ a, button {
                 }
                 &.dark{
                     color: white;
+                    background-color: rgba(98, 166, 127, 0.7);
+                    &:hover{
+                        background: rgba(98, 166, 127, 0.5);
+                    }
                 }
+
             }
         }
     }
@@ -502,6 +507,8 @@ a, button {
         transition: 0.3s ease;
         max-width: 260px;
         width: 100%;
+        cursor: pointer;
+
     }
 
     &-image {
@@ -567,7 +574,6 @@ a, button {
 
     &-buy {
         background-color: #419EFC;
-
         font-style: normal;
         font-weight: bold;
         font-size: 14px;
@@ -576,8 +582,11 @@ a, button {
         width: 100%;
         padding: 15px 0;
         margin: auto;
+        transition:background-color 0.3s ease;
+
         &:hover{
-            opacity: 0.7;
+            opacity: 0.8;
+
         }
 
     }
@@ -737,34 +746,6 @@ a, button {
         margin-bottom: 10px;
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -1119,11 +1100,16 @@ a, button {
 }
 
 .donate__products-item.dark{
-    background: rgba(92, 92, 92, 0.3);
+    background: rgba(92, 92, 92, 0.5);
 }
 
+.donate__products-buy.dark{
+    background: rgba(98, 166, 127, 0.7);
+}
 
-
+.theme.dark{
+    background-color: rgba(163, 163, 163, 0.8);
+}
 
 
 .disabled{
@@ -1132,3 +1118,12 @@ a, button {
 .active{
     display: block;
 }
+
+.test-2 {
+    animation: move 10s linear infinite;
+    background-image: linear-gradient(to right,#ff0000, #f702d7, #2302f7, #02f79e, #f7f302, #02f79e, #2302f7, #f702d7, #ff0000 );
+    background-size: 700% auto;
+
+
+}
+@keyframes move { to { background-position: 200% center; } }
